# sundew

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  fastapi_example.db  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: README.md  _coverpage.md  _sidebar.md  changelog.md  index.html  package-lock.json  writing-tests.md
docs/pages/: about.md  changelog.md  cli.md  getting-started.md  writing-tests.md
examples/: pyproject.toml
examples/async_example/: async_example.py
examples/async_example/tests/: test_async_example.py
examples/boto3/: pyproject.toml
examples/boto3/example/: dynamodb.py  s3.py  sqs.py
examples/boto3/tests/: fixtures.py  test_s3.py  test_sqs.py
examples/examples/: async_example.py  fastapi_example.py  side_effects_example.py  simple_example.py
examples/examples/db/: fastapi_example.db
examples/fastapi/: alembic.ini  db.sqlite  pyproject.toml
examples/fastapi/app/: db.py  main.py
examples/fastapi/app/db/migrations/: env.py
examples/fastapi/app/db/migrations/versions/: 3c814510e202_initial_schema.py
examples/fastapi/app/migrations/: env.py
examples/fastapi/app/migrations/versions/: cfbba7624559_added_notes_table.py
examples/fastapi/tests/: fixtures.py  test_fastapi_example.py
examples/mathematics/: auto_test_quadratic.py  auto_test_square.py  mathematics.py  test_strings.py
examples/mathematics/tests/: auto_test_quadratic.py  auto_test_square.py  test_mathematics.py
examples/simple_async/tests/: test_main.py
examples/simple_example/: main.py
examples/simple_example/tests/: auto_test_quadratic.py  test_main.py
examples/simple_side_effects/: main.py
examples/simple_side_effects/tests/: auto_test_make_silly.py  test_main.py
examples/strings/: auto_test_make_silly.py  strings.py
examples/strings/tests/: auto_test_make_silly.py  test_strings.py
examples/tests/: test_async_example.py  test_simple_example.py  test_strings.py
examples/tests/side_effects_example/: auto_test_make_silly.py
examples/tests/simple_example/: auto_test_quadratic.py  auto_test_square.py
shore/: __main__.py  config.py  test.py  types.py
sundew/: __init__.py  __main__.py  auto_test_generate_function_dependency_test_file.py  config.py  graph.py  main.py  side_effects.py  test.py  test_client.py  test_runner.py  test_writer.py  types.py  utils.py
tests/: auto_test_generate_function_dependency_test_file.py  fixtures.py  test_graph.py  test_side_effects.py  test_test.py  test_test_writer.py
tests/examples/: fixtures.py  test_async_example.py  test_fastapi_example.py  test_side_effects_example.py  test_simple_example.py
tests/examples/side_effects_example/: auto_test_make_silly.py
tests/examples/simple_example/: auto_test_quadratic.py  auto_test_square.py
tests/test_writer/: auto_test_generate_function_dependency_test_file.py
