[tool.poetry]
name = "sundew"
version = "0.0.0"
description = ""
authors = ["devenjarvis <devenjarvis@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
black = "*"
cachetools = "*"
python = "^3.9"
pydantic = "^1.10.2"
typer = {version = "^0.7.0", extras = ["all"]}
poetry = "^1.4.0"



[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
poethepoet = "*"
types-cachetools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
docs = "docsify serve ./docs"
fix = "ruff . --fix"
format = "black ."
format_check = "black . --check"
lint = "ruff ."
sundew = "python -m sundew"
test = "python -m sundew ./tests"
type = "mypy ."


[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = ["D", "T", "ISC", "S101", "ANN101", "COM812", "TCH003", "PLR0913"]

