[tool.poetry]
name = "sundew"
version = "0.0.0"
description = ""
authors = ["devenjarvis <devenjarvis@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/devenjarvis/sundew"
documentation = "https://devenjarvis.github.io/sundew/#/"
keywords = ["testing"]
classifiers = ["Topic :: Software Development :: Testing"]

[tool.poetry.dependencies]
black = "*"
cachetools = "*"
python = "^3.9"
pydantic = "^1.10.2"
typer = {version = "^0.7.0", extras = ["all"]}
poetry = "^1.4.0"
httpx = "^0.23.3"

[tool.poetry.scripts]
sundew = "sundew.main:app"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
poethepoet = "*"
types-cachetools = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
docs = "docsify serve ./docs"
fix = "ruff . --fix"
format = "black ."
format_check = "black . --check"
lint = "ruff ."
sundew = "sundew"
test = "sundew ./tests"
type = "mypy ."

test_simple_async = "sundew ./examples/simple_async/tests"
test_simple_example = "sundew ./examples/simple_example/tests"
test_simple_side_effects = "sundew ./examples/simple_side_effects/tests"
test_fastapi = "sundew ./examples/fastapi/tests"

test_examples = ["test_simple_async", "test_simple_example", "test_simple_side_effects", "test_fastapi"]



[tool.ruff]
target-version = "py39"
line-length = 100
select = ["ALL"]
ignore = ["D", "T", "ISC", "S101", "ANN101", "COM812", "TCH003", "PLR0913", "INP001"]
unfixable = ["ERA001"]

[tool.mypy]
    [[tool.mypy.overrides]]
    module = 'sqlalchemy'
    ignore_missing_imports = true