[tool.poetry]
name = "boto3-example"
version = "0.1.0"
description = "Example of using sundew to test applications using boto3"
authors = ["devenjarvis <devenjarvis@gmail.com>"]
packages = [{include = "example"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.118"

[tool.poetry.group.dev.dependencies]
sundew = {path = "../../", develop = true}
poethepoet = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "sundew ./tests"